Fix height off select on mobile devices for sticky filter

--- a/style.css
+++ b/style.css
@@ -858,7 +858,7 @@ text-align:center !important;
     .courses-filter-search .course-filter .filter-box select {
         font-size: 13px;
         padding: 0px 5px;
-        height: 38px;
+        /* height: 38px; */
     }
 }
 .card-wide{
